--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" async>!function (e, t) { a = e.createElement("script"), m = e.getElementsByTagName("script")[0], a.async = 1, a.src = t, a.fetchPriority = 'high', m.parentNode.insertBefore(a, m) }(document, "https://universal.wgplayer.com/tag/?lh=" + window.location.hostname + "&wp=" + window.location.pathname + "&ws=" + window.location.search);
   </script>
   <meta property="og:image" content="https://abinbins.github.io/thumb/1v1-lol.png">
-
+  <meta name="google-site-verification" content="D8YwTWZQCJDdldLUqqdfnia8JLl8RaoBmB7itPGOVBk" />
   <meta charset="utf-8">
   <link rel="icon" href="../images/favicon.png" sizes="32x32">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
