--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <meta name="description"
     content="1v1 Lol - 1v1 Lol Unblocked: on Chromebook delivers seamless, lag-free gaming with an optimized interface, ensuring an enjoyable and safe experience for players of all ages">
-  <meta property="og:url" content="https://unblocked-roblox.github.io/play/1v1-lol.html" />
+  <meta property="og:url" content="https://1v1lol-unblocked6x.github.io/" />
   <meta property="og:image:width" content="200 px" />
   <meta property="og:image:height" content="200 px" />
   <meta property="og:title" content="1v1 Lol" />
